tests/chainsaw-multi-ns/gateway-multi-operator/cross-wired/gateway-cross.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-cross
  namespace: namespace-a
spec:
  gatewayClassName: ngrok-gatewayclass-b
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: test-gateway-cross.ngrok.app
